--- a/style.css
+++ b/style.css
@@ -121,6 +121,12 @@ body {
   bottom: -4px;
   left: 20px;
 }
+#mobile{
+  display: none;
+}
+#close{
+  display: none;
+}
 
 
 /* Home Page */
@@ -462,4 +468,89 @@ footer .install img{
 footer .follow i:hover,
 footer a:hover{
   color: #088178;
+}
+footer .copyright{
+  width: 100%;
+  text-align: center;
+}
+@media(max-width: 799px){
+  .section-p1{
+    padding: 40px 40px;
+  }
+  #navbar {
+    display: none;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    position: fixed;
+    top: 0;
+    right: 0px;
+    height: 100vh;
+    width: 300px;
+    background-color: #e3e6f3;
+    box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
+    padding: 80px 0 0 10px;
+  }
+  #navbar.active{
+    display: flex;
+  }
+  #navbar .cart{
+    display: none;
+  }
+
+  #navbar li{
+    margin-bottom: 25px;
+  }
+  #mobile{
+    display: flex;
+    align-items: center;
+  }
+  #mobile i{
+    color: #1a1a1a;
+    font-size: 24px;
+    padding-left: 20px;
+  }
+  #close{
+    display: block;
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    color: #222;
+    font-size: 24px;
+    text-decoration: none;
+  }
+
+  #hero{
+    height: 70vh;
+    padding: 0 80px;
+    background-position: top 30% right 30%;
+  }
+  #feature{
+    justify-content: center;
+  }
+  #feature .fe-box{
+    margin: 15px 15px;
+  }
+  #product1 .pro-container{
+    justify-content: center;
+  }
+  #product1 .pro{
+    margin: 15px;
+  }
+  #banner{
+    height: 20vh;
+  }
+  #sm-banner .banner-box{
+    min-width: 100%;
+    height: 30vh;
+  }
+  #banner3{
+    padding: 0 40px;
+  }
+  #banner3  .banner-box{
+    width: 28%;
+  }
+  #newsletter .form{
+    width: 70%;
+  }
 }
