--- a/style.css
+++ b/style.css
@@ -622,6 +622,35 @@ color: #088178;
   z-index: -9;
 }
 
+/* About Page */
+#page-header.about-header{
+  background-image: url("img/about/banner.png");
+}
+#about-head{
+  display: flex;
+  align-items: center;
+}
+#about-head img{
+  width: 50%;
+  height: auto;
+}
+#about-head div{
+  padding-left: 40px;
+}
+
+#about-app{
+  text-align: center;
+}
+#about-app .video{
+  width: 70%;
+  height: 100%;
+  margin: 30px auto 0 auto;
+}
+#about-app .video video{
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+}
 
 
 
@@ -773,6 +802,24 @@ color: #088178;
     margin-right: 0px;
   }
   #prodetails .single-pro-details{
+    width: 100%;
+  }
+
+  /* Blog page */
+  #blog{
+    padding: 100px 20px 0 20px;
+  }
+  #blog .blog-box{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  #blog .blog-img{
+    width: 100%;
+    margin-right: 0px;
+    margin-bottom: 30px;
+  }
+  #blog .blog-details{
     width: 100%;
   }
 }
