--- a/style.css
+++ b/style.css
@@ -258,8 +258,8 @@ body {
   color: #088178;
 }
 #product1 .pro .cart{
-  width: 40px;
-  height: 40px;
+  /* width: 40px;
+  height: 40px; */
   line-height: 40px;
   border-radius: 50px;
   background-color: #e8f6ea;
@@ -820,6 +820,21 @@ color: #088178;
     margin-bottom: 30px;
   }
   #blog .blog-details{
+    width: 100%;
+  }
+
+  /* About Page */
+  #about-head{
+    flex-direction: column;
+  }
+  #about-head img{
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  #about-head div{
+    padding-left: 0px;
+  }
+  #bout-app .video{
     width: 100%;
   }
 }
